usbredir-0.4.2 6 March 2012
---------------------------
-Add usb_redir_babble status code

-usbredirhost:
 -Ensure we always re-attach kernel drivers on cleanup
 -Make set_config handling more robust
 -A set_config or a reset can cause us to loose access to the device, if
  this happens this now gets reported by usbredirhost_read_guest_data
  returning usbredirhost_read_device_lost

usbredir-0.4.1 25 February 2012
-------------------------------
-Brown paper bag release, fix a return without value in a non void function
 which completely breaks usbredir in some cases

usbredir-0.4 22 February 2012
-----------------------------
-Add usb_redir_filter_reject and usb_redir_filter_filter packets and
 an usb_redir_cap_filter capability flag
-Add an usb_redir_device_disconnect_ack packet and
 an usb_redir_cap_device_disconnect_ack capability flag

-usbredirparser:
 -Add an usbredirparser_have_peer_caps function

-usbredirhost:
 -Allow re-using a host instance with multiple devices, see the documentation
  for the new usbredirhost_set_device() function in usbredirhost.h
 -Quite a few bugfixes


usbredir-0.3.3 12 January 2012
------------------------------
-usbredirparser:
 -add usbredirfilter code, to help apps exclude certain devices from
  redirection. See usbredirfilter.h for details.

-usbredirhost:
 -add a usbredirhost_check_device_filter helper function. See usbredirhost.h


usbredir-0.3.2 3 January 2012
-----------------------------
-Switched to automake/autoconf/libtool based make system (Christophe Fergeau)

-usbredirparser:
 -limited multi-thread safeness, see README.multi-thread
 -extend the device_connect packet header with a device_version field
  This new field is only send / received if both sides have the (new)
  usb_redir_cap_connect_device_version capability.
 -Add a hello_func callback which gets called after receiving the hello
  packet from the other side. This can be used to determine when the caps